tests/unit-fail/j087a.ref
Error: UB-STDARG1
Description: 'va_start' used in function with fixed args.
Type: Undefined behavior.
See also: C11 sec. 6.9.1:8, J.2:1 item 87
  at __va_start(j087a.c:5)
  at f(j087a.c:5)
  at main(j087a.c:9)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
